change hero image placement

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,10 @@ font-face {
   * {
     @apply font-satoshi text-primary-color
   }
+
+  html {
+    scroll-behavior: smooth;
+  }
 }
 
 @layer components {
